[package]
name = "invincible"
version = "0.1.0"
authors = ["RichoDemus <git@richodemus.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.6.1" }
bevy_prototype_lyon = "0.4.0"
nalgebra = "0.23.0"
rand = { version = "0.7.3", features = [] }
quicksilver = { version = "0.4.0", default-features = true, features = ["stdweb"]}
ncollide2d = "0.26.1"
itertools = "0.9.0"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4.11"
dashmap = "4.0.0-rc6"
console_error_panic_hook = "0.1.6"
