[package]
name = "invincible"
version = "0.1.0"
authors = ["RichoDemus <git@richodemus.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.6.1" }
bevy_prototype_lyon = "0.4.0"
nalgebra = "0.30.1"
rand = { version = "0.8.5", features = [] }
quicksilver = { version = "0.4.0", default-features = true, features = ["stdweb"]}
ncollide2d = "0.32.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4.11"
dashmap = "5.2.0"
console_error_panic_hook = "0.1.6"
strum = "0.24"
strum_macros = "0.24"
