[package]
name = "invincible"
version = "0.1.0"
authors = ["RichoDemus <git@richodemus.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.11" }
bevy_prototype_lyon = "0.9"
#nalgebra = "0.30.1"
#rand = { version = "0.8.5", features = [] }
#quicksilver = { version = "0.4.0", default-features = true, features = ["stdweb"]}
#ncollide2d = "0.32.0"
itertools = "0.11"
uuid = { version = "1.4", features = ["v4"] }
log = "0.4"
#dashmap = "5.2.0"
#console_error_panic_hook = "0.1.6"
strum = "0.25"
strum_macros = "0.25"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
